# model-similarity

./: .gitignore  AGENTS.md  README.md  index.html
analysis/: README.md  embed_and_visualize.py  embed_centered_by_prompt.py  pyproject.toml  requirements.txt
backend/: main.py  prompts.json  pyproject.toml  settings.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: BatchRunner.tsx  DesignInspiration.tsx  EmbeddingVisualization.tsx  PracticeMode.tsx  ReviewMode.tsx  app-sidebar.tsx  layout-wrapper.tsx
frontend/components/ui/: badge.tsx  sidebar.tsx
frontend/lib/: api.ts  types.ts
frontend/src/: App.tsx
