[project]
name = "model-similarity-backend"
version = "0.1.0"
description = "Backend for model fingerprinting research"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.27.2",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "numpy>=1.24.0",
    "sentence-transformers>=2.2.0",
    "umap-learn>=0.5.0",
]
